[lib]
name = "common"
path = "src/lib.rs"
crate-type = ["lib"]

[package]
name = "blucher"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
embassy-sync = {version = "0.2.0", git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
half = { version = "2.2.0", default_features = false, features = [] }
